tests/negative/gold/missing_setting_test.gold
tests/negative/missing_setting_test.toit:8:18: error: Couldn't find field for field-storing parameter 'y'
  constructor .x .y .z:
                 ^~
tests/negative/missing_setting_test.toit:8:21: error: Couldn't find field for field-storing parameter 'z'
  constructor .x .y .z:
                    ^~
Compilation failed.
